Added monpol minutes analysis

--- a/analyze_cpi_comms.ipynb
+++ b/analyze_cpi_comms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,143 @@
     "import numpy as np\n",
     "from spacy_download import load_spacy\n",
     "\n",
-    "df = pd.read_csv('data/Inf_report_DB.csv')"
+    "df = pd.read_csv('data/Inf_report_DB.csv')\n",
+    "#Get only headline press releases\n",
+    "df = df[df['headline'].str.contains('IPC')]\n",
+    "#Exclude everything but the main release\n",
+    "df = df[~df['headline'].str.contains('expertos|Expertos|INE|Comunicado')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "En marzo de 2023, el Índice de Precios al Consumidor (IPC) anotó una variación mensual de 1,1%, acumulando un incremento de 1,8% al tercer mes del año, y un aumento de 11,1% a doce meses. \n",
+      "\n",
+      "Nueve de las doce divisiones que conforman la canasta del IPC aportaron incidencias positivas en la variación mensual del índice y tres incidieron en forma negativa.\n",
+      "\n",
+      "Entre las divisiones con alzas en sus precios destacó educación (10,8%), que aportó 0,659 puntos porcentuales, y recreación y cultura (2,2%), con 0,144 puntos porcentuales.\n",
+      "\n",
+      "Entre las divisiones con descensos en sus precios destacó transporte (-0,7%), con -0,097 puntos porcentuales.\n",
+      "\n",
+      "Boletín IPC marzo 2023\n",
+      "Separata técnica imputaciones IPC marzo 2023\n",
+      "Cuadro estadístico resultados IPC marzo 2023\n",
+      "[('ipc', 5), ('marzo', 4), ('precios', 3), ('divisiones', 3), ('puntos', 3), ('porcentuales', 3), ('ndice', 2), ('variacin', 2), ('mensual', 2), ('doce', 2)]\n",
+      "En febrero de 2023, el Índice de Precios al Consumidor (IPC) anotó una variación mensual de -0,1%, acumulando un incremento de 0,7% al segundo mes del año, y un aumento de 11,9% a doce meses. \n",
+      "\n",
+      "Tres de las doce divisiones que conforman la canasta del IPC aportaron incidencias negativas en la variación mensual del índice, siete incidieron en forma positiva y dos anotaron nula incidencia.\n",
+      "\n",
+      "Las divisiones con descensos en sus precios fueron  transporte (-2,7%), con -0,396 puntos porcentuales; alimentos y bebidas no alcohólicas (-0,3%), con -0,064 puntos porcentuales, y recreación y cultura (-1,0%), con -0,064 puntos porcentuales.\n",
+      "\n",
+      "Entre las divisiones con alzas en sus precios destacó vestuario y calzado (3,9%), con 0,110 puntos porcentuales.\n",
+      "\n",
+      "Boletín IPC febrero 2023\n",
+      "Separata técnica imputaciones IPC febrero 2023\n",
+      "Cuadro estadístico resultados IPC febrero 2023\n",
+      "[('ipc', 5), ('febrero', 4), ('puntos', 4), ('porcentuales', 4), ('precios', 3), ('divisiones', 3), ('ndice', 2), ('variacin', 2), ('mensual', 2), ('doce', 2)]\n",
+      "En enero de 2023, el Índice de Precios al Consumidor (IPC) anotó un aumento mensual de 0,8% y un alza de 12,3% a doce meses.\n",
+      "\n",
+      "Once de las doce divisiones que conforman la canasta del IPC aportaron incidencias positivas en la variación mensual del índice y una incidió en forma negativa.\n",
+      "\n",
+      "Entre las divisiones con incrementos en sus precios destacaron alimentos y bebidas no alcohólicas (1,0%), con 0,227 puntos porcentuales, y bebidas alcohólicas y tabaco (2,7%), con 0,121 puntos porcentuales. \n",
+      "\n",
+      "La división que incidió en forma negativa fue transporte (-0,2%), con -0,029 puntos porcentuales.\n",
+      "\n",
+      "Boletín IPC enero 2023\n",
+      "Separata técnica imputaciones IPC enero 2023\n",
+      "Cuadro estadístico resultados IPC enero 2023\n",
+      "[('ipc', 5), ('enero', 4), ('puntos', 3), ('porcentuales', 3), ('ndice', 2), ('precios', 2), ('mensual', 2), ('doce', 2), ('divisiones', 2), ('incidi', 2)]\n",
+      "En diciembre de 2022, el Índice de Precios al Consumidor (IPC) anotó un aumento mensual de 0,3%, acumulando un alza de 12,8% en el año y a doce meses. \n",
+      "\n",
+      "Seis de las doce divisiones que conforman la canasta del IPC aportaron incidencias positivas en la variación mensual del índice, cinco registraron incidencias negativas y una presentó nula incidencia.\n",
+      "\n",
+      "Entre las divisiones con alzas en sus precios destacaron alimentos y bebidas no alcohólicas (1,1%), con 0,247 puntos porcentuales, y recreación y cultura (2,1%), con 0,138 puntos porcentuales.\n",
+      "\n",
+      "Entre las divisiones que incidieron en forma negativa destacó transporte (-0,5%), con -0,081 puntos porcentuales.\n",
+      "\n",
+      "Boletín IPC diciembre 2022\n",
+      "Separata técnica imputaciones IPC diciembre 2022\n",
+      "Cuadro estadístico resultados IPC diciembre 2022\n",
+      "[('ipc', 5), ('diciembre', 4), ('divisiones', 3), ('puntos', 3), ('porcentuales', 3), ('ndice', 2), ('precios', 2), ('mensual', 2), ('doce', 2), ('incidencias', 2)]\n",
+      "En noviembre de 2022, el Índice de Precios al Consumidor (IPC) anotó un aumento mensual de 1,0%, acumulando un alza de 12,5% al undécimo mes del año, y un incremento de 13,3% a doce meses.\n",
+      "\n",
+      "Diez de las doce divisiones que conforman la canasta del IPC aportaron incidencias positivas en la variación mensual del índice. Entre ellas destacaron alimentos y bebidas no alcohólicas (1,7%), con 0,364 puntos porcentuales (pp.), y transporte (1,3%), con 0,199 pp. \n",
+      "\n",
+      "Entre las divisiones que incidieron en forma negativa destacó recreación y cultura (-1,4%), con -0,090 pp. \n",
+      "\n",
+      "Boletín IPC noviembre 2022 \n",
+      "Separata técnica imputaciones IPC noviembre 2022 \n",
+      "Cuadro estadístico resultados IPC noviembre 2022 \n",
+      "[('ipc', 5), ('noviembre', 4), ('pp', 3), ('ndice', 2), ('mensual', 2), ('doce', 2), ('divisiones', 2), ('precios', 1), ('consumidor', 1), ('anot', 1)]\n",
+      "En octubre de 2022, el Índice de Precios al Consumidor (IPC) anotó un aumento mensual de 0,5%, acumulando un alza de 11,4% en lo que va del año, y una variación de 12,8% a doce meses.  \n",
+      "\n",
+      "Ocho de las doce divisiones que conforman la canasta del IPC aportaron incidencias positivas en la variación mensual del índice, tres presentaron incidencias negativas y una registró nula incidencia. \n",
+      "\n",
+      "Entre las divisiones con alzas en sus precios destacaron alimentos y bebidas no alcohólicas (0,8%), con 0,168 puntos porcentuales (pp.), y transporte (0,8%), con 0,120 pp. Entre las divisiones con descensos destacó equipamiento y mantención del hogar (-1,5%), con -0,093 pp.   \n",
+      "\n",
+      "Boletín IPC octubre 2022 \n",
+      "Separata técnica imputaciones IPC octubre 2022\n",
+      "Cuadro estadístico resultados IPC octubre \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "[('ipc', 5), ('octubre', 4), ('divisiones', 3), ('pp', 3), ('ndice', 2), ('precios', 2), ('mensual', 2), ('variacin', 2), ('doce', 2), ('incidencias', 2)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/wcrossb/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/wcrossb/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from collections import Counter\n",
+    "import re \n",
+    "\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "def get_most_common_words(text, n):\n",
+    "    # tokenize the text into words\n",
+    "    text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+    "    words = word_tokenize(text.lower())\n",
+    "\n",
+    "    # remove stop words\n",
+    "    stop_words = set(stopwords.words('spanish'))\n",
+    "    words = [word for word in words if word not in stop_words]\n",
+    "\n",
+    "    # count the frequency of each word\n",
+    "    word_counts = Counter(words)\n",
+    "\n",
+    "    # return the n most common words\n",
+    "    return word_counts.most_common(n)\n",
+    "\n",
+    "# sample text\n",
+    "for i in range (0,6):\n",
+    "    text = df.iloc[i,4]\n",
+    "    print(text)\n",
+    "        \n",
+    "    # get the 5 most common words from the text\n",
+    "    most_common_words = get_most_common_words(text, 10)\n",
+    "\n",
+    "    # print the most common words\n",
+    "    print(most_common_words)\n"
    ]
   },
   {
