Code fixes and markdown

--- a/webscrape.ipynb
+++ b/webscrape.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This code focuses on scraping data from the following site:\n",
+    "#### This code focuses on scraping data from the following sites:\n",
     "* https://www.ine.gob.cl/sala-de-prensa/prensa-economia/indices-de-precios-e-inflacion/1 \n",
-    "* This is Chile's National Statistics office CPI bulletins"
+    "* This is Chile's National Statistics office CPI bulletins\n",
+    "* https://www.bcentral.cl/en/buscador?categoria=Prensa/Comunicados%20de%20RPM\n",
+    "* This contains meeting minutes\n",
+    "* https://www.bcentral.cl/en/buscador?categoria=Press/Press%20releases/IPoM\n",
+    "* This contains the actual full written report"
    ]
   },
   {
@@ -30,7 +34,6 @@
    "outputs": [],
    "source": [
     "#Collect all of these inflation reports for Chile\n",
-    "    \n",
     "data = []\n",
     "\n",
     "for x in range(1, 20):\n",
@@ -81,97 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.bcentral.cl/en/buscador?categoria=Prensa/Comunicados%20de%20RPM\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/comunicado-rpm-abril-2023\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-january-2023\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-december-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-october-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-september-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-july-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-june-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-may-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-march-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-january-2022\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-december-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-october-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-august-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-july-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-june-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-may-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-march-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-january-2021\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-december-2020\n",
-      "\n",
-      "See more\n",
-      "\n",
-      "https://www.bcentral.cl/content/-/details/monetary-policy-meeting-october-2020\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Collect monpol press releases\n",
     "    \n",
@@ -216,17 +131,7 @@
     "    #     print(\"error occurred\")\n",
     "\n",
     "df = pd.DataFrame(data)\n",
-    "df.to_csv('monpol_minutes_DB.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(data)\n",
-    "df.to_csv('monpol_minutes_DB.csv')"
+    "df.to_csv('data/monpol_minutes_DB.csv')"
    ]
   },
   {
@@ -317,24 +222,7 @@
     "        print(\"error occurred\")\n",
     "\n",
     "df = pd.DataFrame(data)\n",
-    "df.to_csv('monpol_minutes_DB.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.bcentral.cl/content/-/details/banco-central-publica-calendario-de-reuniones-de-pol%C3%ADtica-monetaria-y-financiera-informes-de-pol%C3%ADtica-monetaria-y-de-estabilidad-financiera-para-2023\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(link)"
+    "df.to_csv('data/monpol_PR_DB.csv')"
    ]
   }
  ],
